@@ -1,3 +1,4 @@
+* Add currency on product_supplier
 * Add a Function field delivery_date to purchase line
 * Purchase date is required only at confirmation
 * compute_supply_date returns only one date
